--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -36,7 +36,7 @@
 
 <!-- Category Post -->
 
-<section class="mb-16">
+<!-- <section class="mb-16">
 
     {{ $cat := "astronomy" }}
 
@@ -57,23 +57,23 @@
 
     </div>
 
-  </section>
+  </section> -->
 
-<!-- / End category post --> 
-<hr class="my-8">
+<!-- / End category post -->
+<!-- <hr class="my-8"> -->
 <!-- Start recent post  -->
 
   <section class="mb-16">
 
     <div class="flex items-center mb-6">
 
-      <h2 class="text-3xl md:text-4xl font-bold mr-auto">Recent Post</h2>
+      <h2 class="text-3xl md:text-4xl font-bold mr-auto">Naujausi įrašai</h2>
 
     </div>
 
     <div class="grid grid-cols-1 md:grid-cols-3 gap-x-6 gap-y-10">
 
-    {{ $paginator := .Paginate ( where site.RegularPages "Type" "in" site.Params.mainSections) }}
+    {{ $paginator := .Paginate site.RegularPages }}
 
     {{ range $paginator.Pages }}
 
@@ -99,6 +99,6 @@
 
 <!-- / End recent post  -->
 
-  {{- partial "content/newsletter.html" . -}}
+  <!-- {{- partial "content/newsletter.html" . -}} -->
 
 {{ end }}
