--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,12 +1,12 @@
 {{ define "main" }}
 {{- partial "content/breadcrumb.html" . -}}
 
-<div class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-14">
+<div class="gap-6 mb-14">
 
-  <article class="md:col-span-2 prose lg:prose-lg">
+  <article class="mx-auto prose lg:prose-lg">
 
     <header class="not-prose">
-      
+
       <h1 id="title" class="text-4xl font-bold leading-normal">{{ .Title }}</h1>
 
       <div id="lead" class="my-6">
@@ -14,7 +14,7 @@
         <p class="font-bold">{{ .Params.description }} </p>
 
       </div>
-      
+
       <div id="writer" class="flex items-center space-x-4">
 
         {{- $name := .Site.Author.name -}}
@@ -24,11 +24,11 @@
         <img class="w-12 h-12 bg-black rounded-full" src="{{ $avatar.Permalink }}" alt="{{ $name }} avatar" width="{{ $avatar.Width }}" height="{{ $avatar.Height }}">
 
         {{ end -}}
-        
+
         <ul class="flex items-center space-x-4 flex-nowrap whitespace-nowrap overflow-x-auto">
-          
+
           <li class="font-semibold my-2">{{ .Site.Author.name }}</li>
-          
+
           <li class="before:content-['•'] before:mr-2 before:opacity-50 my-2">
             {{- $dateMachine := .Date | time.Format "2006-01-02T15:04:05-07:00" -}}
             {{- $dateHuman := .Date | time.Format ":date_long" -}}
@@ -42,7 +42,7 @@
         </ul>
 
       </div>
-      
+
     </header>
 
     <figure id="featureimage" class="rounded-xl aspect-video">
@@ -83,7 +83,7 @@
 
     <footer id="content-footer" class="not-prose">
 
-      <div id="comment" class="border p-8 bg-zinc-100 rounded-2xl">
+      <!-- <div id="comment" class="border p-8 bg-zinc-100 rounded-2xl">
 
         <h2 class="text-xl font-semibold">Comment</h2>
 
@@ -91,7 +91,7 @@
 
         {{- /* template "_internal/disqus.html" . */ -}}
 
-      </div>
+      </div> -->
 
       <div id="author-box" class="my-8 md:my-14 border p-8 bg-zinc-100 rounded-2xl">
 
@@ -129,7 +129,7 @@
           </li>
 
         </ul>
-        
+
       </div>
 
       <div id="related-post" class="">
@@ -147,7 +147,7 @@
           {{- partial "content/card.html" . -}}
 
           {{- end }}
-          
+
         </div>
 
         {{- end }}
@@ -158,12 +158,12 @@
   </article>
 
   <!-- Aside -->
-  <aside class="md:col-span-1">
+  <!-- <aside class="md:col-span-1">
 
     {{- partial "content/aside.html" . -}}
-    
-  </aside>
+
+  </aside> -->
 
 </div>
-  
+
 {{ end }}
