fixing authors image

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -17,11 +17,11 @@
 
       <div id="writer" class="flex items-center space-x-4">
 
-        {{- $name := .Site.Author.name -}}
+        {{- $name := .Site.Params.Author.name -}}
 
-        {{- with $avatar := resources.Get .Site.Author.avatar }}
+        {{- with $avatar := resources.Get .Site.Params.Author.avatar }}
 
-        <img class="w-12 h-12 bg-black rounded-full" src="{{ $avatar.Permalink }}" alt="{{ $name }} avatar" width="{{ $avatar.Width }}" height="{{ $avatar.Height }}">
+        <img class="w-12 h-12 bg-black rounded-full" src="{{ $avatar.Permalink }}" alt="{{ $name }} avataras" width="{{ $avatar.Width }}" height="{{ $avatar.Height }}">
 
         {{ end -}}
 
@@ -95,13 +95,13 @@
 
       <div id="author-box" class="my-8 md:my-14 border p-8 bg-zinc-100 rounded-2xl">
 
-        <img class="w-20 h-20 rounded-full" src="{{ .Site.Author.avatar }}" alt="{{ .Site.Author.name }}">
+        <img class="w-20 h-20 rounded-full" src="{{ (resources.Get .Site.Params.Author.avatar).Permalink }}" alt="{{ .Site.Params.Author.name }}">
 
-        <h2 class="text-xl font-bold my-4">Writter by : {{ .Site.Author.name }}</h2>
+        <h2 class="text-xl font-bold my-4">{{ .Site.Params.Author.name }}</h2>
 
-        <p class="mb-4">{{ .Site.Author.bio }}</p>
+        <p class="mb-4">{{ .Site.Params.Author.bio }}</p>
 
-        <ul class="flex flex-wrap space-x-4">
+        <!-- <ul class="flex flex-wrap space-x-4">
           <li>
             <a class="flex items-center decoration-auto hover:underline" href="https://facebook.com/#" target="_blank" rel="noopener">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
@@ -128,7 +128,7 @@
             </a>
           </li>
 
-        </ul>
+        </ul> -->
 
       </div>
 
