fixing styles and other

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -27,5 +27,5 @@
 		</div>
 	</div>
 	{{- partial "menu.html" (dict "menuID" "main" "page" .) -}}
-	{{- partial "search.html" . -}}
+	<!-- {{- partial "search.html" . -}} -->
 </div>
