--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -22,16 +22,16 @@
   		</li>
 
       {{ end }}
-    
+
     </ul>
-  
+
   </section>
 
-  <aside class="md:col-span-1">
+  <!-- <aside class="md:col-span-1">
 
     {{- partial "content/aside.html" . -}}
-    
-  </aside>
+
+  </aside> -->
 
   </div>
 
