--- a/layouts/partials/content/card.html
+++ b/layouts/partials/content/card.html
@@ -1,5 +1,5 @@
 <article class="relative group bg-zinc-100 hover:bg-blue-100 rounded-3xl">
-	
+
 	<a class="insert-link" href="{{ .Permalink }}"></a>
 
 	<figure class="w-full aspect-video overflow-hidden rounded-3xl">
@@ -25,7 +25,7 @@
 
 	<div class="p-6">
 
-		<time datetime="{{ .Date.Format "2006-01-02T15:04:05-07:00" | safeHTML }}">{{ .Date.Format "Jan 02, 2006" }}</time>
+		<time datetime="{{ .Date.Format "2006-01-02T15:04:05-07:00" | safeHTML }}">{{ .Date.Format ":date_long" }}</time>
 
 		<h3 class="my-4 text-2xl font-bold">{{ .LinkTitle }}</h3>
 
