fixing small mistake regarding date format

--- a/layouts/partials/content/card.html
+++ b/layouts/partials/content/card.html
@@ -25,7 +25,7 @@
 
 	<div class="p-6">
 
-	  {{ $t := .Date.Format "2006-01-02T15:04:05-07:00" | safeHTML }}
+	  {{ $t := .Date.Format "2006-01-02T15:04:05-07:00" }}
 
 		<time datetime="{{ $t | safeHTML }}">{{ $t | time.Format ":date_long" }}</time>
 
