fix: updating tags wording

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -77,7 +77,7 @@
 
       <!-- Tags list -->
 
-      {{- partial "terms.html" (dict "taxonomy" "Žymės" "page" .) -}}
+      {{- partial "terms.html" (dict "taxonomy" "tags" "page" .) -}}
 
     </div>
 
