--- a/layouts/partials/terms.html
+++ b/layouts/partials/terms.html
@@ -15,7 +15,7 @@ For a given taxonomy, renders a list of terms assigned to the page.
 
     <ul id="taxonomy" class="not-prose flex items-center space-x-4 flex-nowrap whitespace-nowrap overflow-x-auto">
 
-      <li class="font-semibold my-4">{{ $label }}:</li>
+      <li class="font-semibold my-4">Žymės:</li>
       {{- range . }}
         <li ><a class="py-2 px-6 border rounded-full hover:bg-zinc-100 active:bg-zinc-300" href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></li>
       {{- end }}
