feat: adding blog to header

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -68,6 +68,12 @@
 								class="block py-2 px-3 rounded-sm  md:hover:bg-transparent md:hover:text-blue-700 md:p-0"
 							>Upės</a>
 						</li>
+						<li>
+							<a
+								href="/tinklarastis"
+								class="block py-2 px-3 rounded-sm  md:hover:bg-transparent md:hover:text-blue-700 md:p-0"
+							>Tinklaraštis</a>
+						</li>
 					</ul>
 				</div>
 			</div>
